--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <servlet>
-    <servlet-name>Faces Servlet</servlet-name>
-    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Faces Servlet</servlet-name>
-    <url-pattern>/faces/*</url-pattern>
-  </servlet-mapping>
+  	<display-name>Tethys</display-name>
+
+	<!-- Paginas de erro do sistema -->
+	<error-page>
+		<error-code>404</error-code>
+		<location>/naoEncontrado.jsf</location>
+	</error-page>
+	
+	<session-config>
+	    <tracking-mode>COOKIE</tracking-mode>
+	</session-config>
+	
+	<mime-mapping>
+		<extension>map</extension>
+		<mime-type>application/octet-stream</mime-type>
+	</mime-mapping>
+
+
 </web-app>
