--- a/pom.xml
+++ b/pom.xml
@@ -51,12 +51,12 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
-			<version>1.2</version><!--$NO-MVN-MAN-VER$ -->
+			<version>1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-			<version>3.0.1</version><!--$NO-MVN-MAN-VER$ -->
+			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -232,6 +232,12 @@
 			<groupId>org.thymeleaf</groupId>
 			<artifactId>thymeleaf</artifactId>
 			<version>3.0.2.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>6.0</version>
 		</dependency>
 
 	</dependencies>
