--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,13 @@
 			<version>1.10.5.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.webflow</groupId>
+			<artifactId>spring-faces</artifactId>
+			<version>${spring.webflow.version}</version>
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.springframework</groupId>
