--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
 		<slf4j.version>1.6.6</slf4j.version>
 		<logback.version>1.0.1</logback.version>
 		<jackson.version>2.5.1</jackson.version>
+		
+		<org.thymeleaf-version>2.1.3.RELEASE</org.thymeleaf-version>
+        <org.thymeleaf.extras.tiles2-version>2.1.1.RELEASE</org.thymeleaf.extras.tiles2-version>
+        <org.thymeleaf.extras.springsecurity3-version>2.1.1.RELEASE</org.thymeleaf.extras.springsecurity3-version>
+        <nz.net.ultraq.thymeleaflayout-version>1.2.1</nz.net.ultraq.thymeleaflayout-version>
 	</properties>
 
 	<dependencyManagement>
@@ -352,11 +357,37 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.thymeleaf</groupId>
-			<artifactId>thymeleaf</artifactId>
-			<version>3.0.2.RELEASE</version>
-		</dependency>
+		 <!-- View -->
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>${org.thymeleaf-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring4</artifactId>
+            <version>${org.thymeleaf-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity3</artifactId>
+            <version>${org.thymeleaf.extras.springsecurity3-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-tiles2</artifactId>
+            <version>${org.thymeleaf.extras.tiles2-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-tiles2-spring4</artifactId>
+            <version>${org.thymeleaf.extras.tiles2-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>nz.net.ultraq.thymeleaf</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
+            <version>${nz.net.ultraq.thymeleaflayout-version}</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.primefaces</groupId>
