--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,8 @@
 		<slf4j.version>1.6.6</slf4j.version>
 		<logback.version>1.0.1</logback.version>
 		<jackson.version>2.5.1</jackson.version>
-		
-		<org.thymeleaf-version>2.1.3.RELEASE</org.thymeleaf-version>
-        <org.thymeleaf.extras.tiles2-version>2.1.1.RELEASE</org.thymeleaf.extras.tiles2-version>
-        <org.thymeleaf.extras.springsecurity3-version>2.1.1.RELEASE</org.thymeleaf.extras.springsecurity3-version>
-        <nz.net.ultraq.thymeleaflayout-version>1.2.1</nz.net.ultraq.thymeleaflayout-version>
+
+		<thymeleaf.version>3.0.0.RELEASE</thymeleaf.version>
 	</properties>
 
 	<dependencyManagement>
@@ -64,9 +61,9 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-		    <groupId>javax.faces</groupId>
-		    <artifactId>javax.faces-api</artifactId>
-		    <version>2.2</version>
+			<groupId>javax.faces</groupId>
+			<artifactId>javax.faces-api</artifactId>
+			<version>2.2</version>
 		</dependency>
 
 		<dependency>
@@ -161,13 +158,13 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>4.2.0.RELEASE</version>
 		</dependency>
-		
+
 		<dependency>
-		    <groupId>org.springframework.data</groupId>
-		    <artifactId>spring-data-jpa</artifactId>
-		    <version>1.10.5.RELEASE</version>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>1.10.5.RELEASE</version>
 		</dependency>
-		
+
 
 
 
@@ -357,37 +354,26 @@
 			<scope>test</scope>
 		</dependency>
 
-		 <!-- View -->
-        <dependency>
-            <groupId>org.thymeleaf</groupId>
-            <artifactId>thymeleaf</artifactId>
-            <version>${org.thymeleaf-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.thymeleaf</groupId>
-            <artifactId>thymeleaf-spring4</artifactId>
-            <version>${org.thymeleaf-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.thymeleaf.extras</groupId>
-            <artifactId>thymeleaf-extras-springsecurity3</artifactId>
-            <version>${org.thymeleaf.extras.springsecurity3-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.thymeleaf.extras</groupId>
-            <artifactId>thymeleaf-extras-tiles2</artifactId>
-            <version>${org.thymeleaf.extras.tiles2-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.thymeleaf.extras</groupId>
-            <artifactId>thymeleaf-extras-tiles2-spring4</artifactId>
-            <version>${org.thymeleaf.extras.tiles2-version}</version>
-        </dependency>
-        <dependency>
-            <groupId>nz.net.ultraq.thymeleaf</groupId>
-            <artifactId>thymeleaf-layout-dialect</artifactId>
-            <version>${nz.net.ultraq.thymeleaflayout-version}</version>
-        </dependency>
+		<!-- View -->
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf-spring4</artifactId>
+			<version>${thymeleaf.version}</version>
+			<scope>compile</scope>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf</artifactId>
+			<version>${thymeleaf.version}</version>
+			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>ognl</groupId>
+					<artifactId>ognl</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
 		<dependency>
 			<groupId>org.primefaces</groupId>
