--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,5 +1,7 @@
-NotEmpty=This field is required.
-Size.userForm.username=Please use between 6 and 32 characters.
-Duplicate.userForm.username=Someone already has that username.
+NotEmpty=Campo Obrigatório.
+Size.userForm.username=Por favor utilizar de 6 a 32 caracter.
+Duplicate.userForm.username=Usuario já cadastrado.
 Size.userForm.password=Try one with at least 8 characters.
 Diff.userForm.passwordConfirm=These passwords don't match.
+Invalido.userForm.cpf=CPF inválido.
+Empty.userForm.cpf=CPF não informado.
