--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>4.2.1.RELEASE</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -525,18 +530,9 @@
 	</profiles>
 
 
-	<!-- <repositories>
-		<repository>
-			<id>central</id>
-			<url>http://mvnrepository.seduc.ce.gov.br/artifactory/libs-release</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<releases>
-				<updatePolicy>always</updatePolicy>
-			</releases>
-		</repository>
-	</repositories> -->
+	<!-- <repositories> <repository> <id>central</id> <url>http://mvnrepository.seduc.ce.gov.br/artifactory/libs-release</url> 
+		<snapshots> <enabled>false</enabled> </snapshots> <releases> <updatePolicy>always</updatePolicy> 
+		</releases> </repository> </repositories> -->
 
 
 </project>
