--- a/pom.xml
+++ b/pom.xml
@@ -487,9 +487,9 @@
 
 	<profiles>
 		<profile>
-			<activation>
+			<!-- <activation>
 				<activeByDefault>true</activeByDefault>
-			</activation>
+			</activation> -->
 			<id>DESENVOLVIMENTO</id>
 			<properties>
 				<activeProfile>DESENVOLVIMENTO</activeProfile>
@@ -498,6 +498,28 @@
 				<jpa.show_sql>true</jpa.show_sql>
 				<jpa.format_sql>true</jpa.format_sql>
 				<postgres.url>jdbc:postgresql://localhost:5433/labnascimento</postgres.url>
+				<postgres.username>postgres</postgres.username>
+				<postgres.password>postgres</postgres.password>
+				<postgres.hibernate.temp.use_jdbc_metadata_defaults>false</postgres.hibernate.temp.use_jdbc_metadata_defaults>
+
+				<!-- Caminho para o ponto de montagem em producao -->
+				<conf.pathFiles>C:\\temp\\</conf.pathFiles>
+				<conf.pathFiles2>C:\\temp\\</conf.pathFiles2>
+			</properties>
+		</profile>
+		
+		<profile>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<id>DESENVOLVIMENTO-SED</id>
+			<properties>
+				<activeProfile>DESENVOLVIMENTO</activeProfile>
+				<logger.level>INFO</logger.level>
+				<logger.appender>console</logger.appender>
+				<jpa.show_sql>true</jpa.show_sql>
+				<jpa.format_sql>true</jpa.format_sql>
+				<postgres.url>jdbc:postgresql://localhost:5432/tethys</postgres.url>
 				<postgres.username>postgres</postgres.username>
 				<postgres.password>postgres</postgres.password>
 				<postgres.hibernate.temp.use_jdbc_metadata_defaults>false</postgres.hibernate.temp.use_jdbc_metadata_defaults>
