--- a/src/main/resources/project.properties
+++ b/src/main/resources/project.properties
@@ -11,3 +11,4 @@ postgres.hibernate.temp.use_jdbc_metadata_defaults=${postgres.hibernate.temp.use
 jpa.show_sql=${jpa.show_sql}
 jpa.format_sql=${jpa.format_sql}
 
+modulo.id=${modulo.id}
